// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there is a selected value 1`] = `
<div
  className="sui-results-per-page"
>
  <div
    className="sui-results-per-page__label"
  >
    Show
  </div>
  <StateManager
    className="sui-select sui-select--inline"
    classNamePrefix="sui-select"
    defaultInputValue=""
    defaultMenuIsOpen={false}
    defaultValue={null}
    isSearchable={false}
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": 20,
          "value": 20,
        },
        Object {
          "label": 40,
          "value": 40,
        },
      ]
    }
    styles={
      Object {
        "control": [Function],
        "dropdownIndicator": [Function],
        "indicatorSeparator": [Function],
        "option": [Function],
        "singleValue": [Function],
        "valueContainer": [Function],
      }
    }
    value={
      Object {
        "label": 40,
        "value": 40,
      }
    }
  />
</div>
`;

exports[`renders correctly when there is not a selected value 1`] = `
<div
  className="sui-results-per-page"
>
  <div
    className="sui-results-per-page__label"
  >
    Show
  </div>
  <StateManager
    className="sui-select sui-select--inline"
    classNamePrefix="sui-select"
    defaultInputValue=""
    defaultMenuIsOpen={false}
    defaultValue={null}
    isSearchable={false}
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": 20,
          "value": 20,
        },
        Object {
          "label": 40,
          "value": 40,
        },
      ]
    }
    styles={
      Object {
        "control": [Function],
        "dropdownIndicator": [Function],
        "indicatorSeparator": [Function],
        "option": [Function],
        "singleValue": [Function],
        "valueContainer": [Function],
      }
    }
    value={null}
  />
</div>
`;
